<resources>
    <string name="app_name">Caronaê</string>
    <string name="gcm_defaultSenderIdOnValues">1012033032693</string>
    <string name="facebook_app_id">933455893356973</string>
    <string name="topic_geral">1</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_main">Caronaê</string>
    <string name="title_activity_login">Login</string>
    <string name="title_ride_search">Pesquisa</string>
    <string name="title_activity_first_login">Primeiro Login</string>
    <string name="no_rides_found_title">Nenhuma carona encontrada\n:(</string>
    <string name="no_rides_found_msg">Você pode ampliar sua pesquisa selecionando vários bairros ou escolhendo um horário mais cedo.</string>
    <string name="ride_driver_finish_warning">Se você é motorista de alguma carona, não esqueça de concluí-la após o seu término. :)</string>
    <string name="welcome_title">Bem vindo ao Caronaê!</string>
    <string name="first_login">Parece que esta é a primeira vez que você usa o Caronaê. \n Para continuar, por favor complete seu perfil.</string>
    <string name="continue_txt">Continuar</string>
    <string name="last_ride_text">Quer encontrar mais caronas? Use a pesquisa!</string>
    <string name="media_choose_title">De onde deseja importar sua foto?</string>
    <string name="facebook_choose">Usar foto do Facebook</string>
    <string name="phone_choose">Selecionar foto do celular</string>
    <string name="remove_choose">Remover minha foto</string>
    <string name="add_contact">Adicionar aos Contatos</string>
    <string name="copy">Copiar</string>
    <string name="tokenHint_et">Sua chave aqui</string>
    <string name="send_bt">Enviar</string>
    <string name="create_bt">CRIAR</string>
    <string name="acess_bt">Acessar</string>
    <string name="edit_bt">Editar</string>
    <string name="edit_profile_bt">Editar Perfil</string>
    <string name="ride">Carona</string>
    <string name="take_ride">PEGAR CARONA</string>
    <string name="full_ride">CARONA CHEIA</string>
    <string name="ride_share">Compartilhar carona</string>
    <string name="mutual_friends">Amigos em comum: - </string>
    <string name="facebook_error_title">Conta do Facebook não autorizada.</string>
    <string name="facebook_error_message">Você precisa ter feito login com sua conta do Facebook</string>
    <string name="saving_profile_error_title">Erro atualizando perfil</string>
    <string name="saving_profile_error_message">Ocorreu um erro salvando as alterações no seu perfil.</string>
    <string name="frag_ridesearch_filterBt">FILTRAR</string>
    <string name="go_rb">Chegando na UFRJ</string>
    <string name="back_rb">Saindo da UFRJ</string>
    <string name="routine_cb">Gerar Rotina</string>
    <string name="no_riders_yet">Nenhum caronista ainda</string>
    <string-array name="tab_tags">
        <item>Chegando na UFRJ</item>
        <item>Saindo da UFRJ</item>
    </string-array>
    <string name="title_activity_opening">OpeningAct</string>
    <string name="title_activity_place">PlaceAct</string>
    <string name="title_activity_my_profile">MyProfileAct</string>
    <string name="gplay_unavailable">Sem o Google Play Services você não poderá receber notificações ou mensagens de bate-papo =(</string>
    <string name="notCarOwner">Parece que você marcou no seu perfil que não possui um carro. Para criar uma carona, preencha os dados do seu carro no perfil.</string>
    <string name="title_activity_chat">ChatAct</string>
    <string name="title_activity_profile">Perfil do usuário</string>
    <string name="title_myprofile_frag">Meu Perfil</string>
    <string name="wait">Aguarde</string>
    <string name="charging">Carregando...</string>
    <string name="act_login_notFound">Usuário não encontrado</string>
    <string name="act_login_invalidLogin">CPF ou chave inválida</string>
    <string name="invalidToken">Chave inválida. Por favor logar novamente</string>
    <string name="act_login_loginFail">Erro ao fazer login</string>
    <string name="act_main_oknogplay">OK</string>
    <string name="act_main_setRideOfferFragTitle">Oferecer carona</string>
    <string name="arrivingAt">"Chegando às %1$s"</string>
    <string name="leavingAt">"Saindo às %1$s"</string>
    <string name="leftAt">"Saiu às %1$s"</string>
    <string name="rideDeleted">Carona excluída</string>
    <string name="ridesDeleted">Caronas excluídas</string>
    <string name="errorRideDeleted">Erro ao desistir de carona</string>
    <string name="Xslots">"%1$s vaga%2$s"</string>
    <string name="notRoutine">Não é rotina</string>
    <string name="repeats">"Repete "</string>
    <string name="sunday">Dom-</string>
    <string name="monday">Seg-</string>
    <string name="tuesday">Ter-</string>
    <string name="wednesday">Qua-</string>
    <string name="thursday">Qui-</string>
    <string name="friday">Sex-</string>
    <string name="saturday">Sab-</string>
    <string name="noRequesters">Nenhuma solicitação para esse anúncio</string>
    <string name="requestAccepted">Solicitação aceita</string>
    <string name="errorAnsweRequest">Erro ao responder solicitação</string>
    <string name="requestRejected">Solicitação rejeitada</string>
    <string name="requestSent">Solicitação enviada</string>
    <string name="errorRequestSent">Erro no envio da solicitação</string>
    <string name="errorGetRequesters">Erro ao obter solicitações</string>
    <string name="errorFinishRide">Erro ao concluir carona</string>
    <string name="finishFutureRide">Não é possível concluir caronas no futuro</string>
    <string name="rideFinished">Carona concluída</string>
    <string name="arrivedAt">Chegou às %1$s</string>
    <string name="Xriders">%1$s caronista%2$s</string>
    <string name="act_profile_errorCountRidesHistory">Erro ao obter contagem de caronas</string>
    <string name="frag_myactiverides_errorGetActiveRides">Erro ao obter caronas ativas</string>
    <string name="frag_myprofile_errorSaveFaceId">Erro ao enviar Facebook ID</string>
    <string name="frag_myprofile_errorFaceLogin">Erro ao logar no Facebook</string>
    <string name="frag_myprofile_SigaPicChoice">Foto do SIGA</string>
    <string name="frag_myprofile_facePicChoice">Foto do Facebook</string>
    <string name="frag_myprofile_picChoice">Qual foto você prefere usar?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancelar</string>
    <string name="cancel_uppercase">CANCELAR</string>
    <string name="chat">Chat</string>
    <string name="save">Salvar</string>
    <string name="discard">Descartar</string>
    <string name="all">Todos</string>
    <string name="days_of_the_week">Dias da semana</string>
    <string name="back">Voltar</string>
    <string name="zone">Zona</string>
    <string name="continue_edit">Continuar editando</string>
    <string name="cancel_profile_edit">Cancelar edição do perfil?</string>
    <string name="frag_myrides_ridesDeleted">Caronas excluídas</string>
    <string name="frag_myrides_noRideFound">Você ainda não possui nenhuma carona.</string>
    <string name="frag_rideshistory_errorGetRides">Erro ao obter histórico de caronas</string>
    <string name="frag_rideSearch_pickZones">Escolha a zona</string>
    <string name="frag_rideSearch_pickNeighborhood">Escolha o(s) bairro(s)</string>
    <string name="frag_rideSearch_hintPickCenter">Escolha o centro</string>
    <string name="frag_rideSearch_hintPickCampi">Escolha o campus</string>
    <string name="frag_rideSearch_noRideFound">Nenhuma carona encontrada.</string>
    <string name="frag_rideSearch_errorListFiltered">Erro ao obter caronas</string>
    <string name="frag_rideOffer_hintPickHub">Escolha o hub de encontro</string>
    <string name="frag_rideOffer_pickZone">Escolha a zona</string>
    <string name="frag_rideOffer_pickNeighborhood">Escolha o bairro</string>
    <string name="frag_rideOffer_pickCenter">Escolha o centro</string>
    <string name="frag_rideOffer_pickCampi">Escolha o campus</string>
    <string name="frag_rideOffer_pickHub">Escolha o hub de encontro</string>
    <string name="frag_rideOffer_noRoutineDays">Nenhum dia selecionado para rotina</string>
    <string name="frag_rideOffer_rideSaved">Carona salva</string>
    <string name="frag_rideOffer_ridesCreated">Caronas criadas</string>
    <string name="frag_rideOffer_errorRideSaved">Erro ao oferecer carona</string>
    <string name="past_ride_creation">Não é possível criar uma carona no passado</string>
    <string name="frag_myprofile_updated">Perfil atualizado</string>
    <string name="frag_myprofile_errorUpdated">Erro ao atualizar usuário</string>
    <string name="frag_myprofile_facePickChoiceNotOnFace">Você não está conectado ao Facebook</string>
    <string name="dashSeparator">-</string>
    <string name="chat_sendMsgHint">Digite sua mensagem</string>
    <string name="hello">Olá :)</string>
    <string name="welcome_text">Bem vindo ao aplicativo de caronas para sua instituição. O acesso é restrito a usuários vinculados às universidades parceiras.</string>
    <string name="act_profile_mutualFriends">Vocês tem %1$d amigo%2$s em comum no Facebook.\n%3$d deles usa%4$s o Caronaê.</string>
    <string name="frag_allrides_nointernettocharge">Não foi possível carregar as caronas.</string>
    <string name="frag_falae_messageHint">Conte pra gente. O que houve?</string>
    <string name="frag_falae_subjectHint">Assunto (opcional)</string>
    <string name="frag_falae_subject">ASSUNTO</string>
    <string name="frag_falae_message">MENSAGEM</string>
    <string name="frag_falae_suggestion_rb">Sugestão</string>
    <string name="frag_falae_question_rb">Dúvida</string>
    <string name="frag_falae_critique_rb">Crítica</string>
    <string name="frag_falae_report_rb">Denúncia</string>
    <string name="frag_falae_rb">Reclamação</string>
    <string name="frag_falae_msgblank">Campo de mensagem vazio</string>
    <string name="frag_falae_thanksSent">Mensagem enviada. Obrigado por entrar em contato!</string>
    <string name="frag_falae_errorSent">Erro ao enviar mensagem</string>
    <string name="frag_falae_suggestionRb">"[SUGESTÃO] "</string>
    <string name="frag_falae_questionRb">"[DÚVIDA] "</string>
    <string name="frag_falae_critiqueRb">"[CRÍTICA] "</string>
    <string name="frag_falae_reason_tv">MOTIVO DO CONTATO</string>
    <string name="frag_falae_reportRb">"[DENÚNCIA] "</string>
    <string name="act_profile_report_bt">REPORTAR</string>
    <string name="frag_myrides_noRides">Nenhuma carona encontrada</string>
    <string name="frag_ridesearch_locationHint">Escolha o bairro (Obrigatório)</string>
    <string name="frag_ridefilter_locationHint">Todos os Bairros</string>
    <string name="frag_ridesearch_centerHint">Escolha o centro</string>
    <string name="frag_ridefilter_centerHint">Todos os Campi</string>
    <string name="frag_ridesearch_campiHint">Centro Universitário</string>
    <string name="frag_ridesearch_searchBt">BUSCAR</string>
    <string name="frag_ridesearch_anotherSearchBt">Outra busca</string>
    <string name="frag_profile_title">Perfil</string>
    <string name="frag_allrides_title">Todas as caronas</string>
    <string name="frag_myrides_title">Minhas Ofertas</string>
    <string name="frag_myactiverides_title">Minhas Caronas</string>
    <string name="frag_history_title">Histórico</string>
    <string name="frag_falae_title">Falaê</string>
    <string name="frag_termsofuse_title">Termos de Uso</string>
    <string name="frag_filterride_description">Adicionando um filtro você pode visualizar apenas as caronas de seu interesse.</string>
    <string name="frag_about_title">Sobre o Caronaê</string>
    <string name="frag_myrides_deleteAllBt">Excluir todas</string>
    <string name="frag_myrides_helpText">Toque nas caronas para verificar solicitações</string>
    <string name="bt_next">Avançar</string>
</resources>