<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_first_fragment"
            android:title="@string/frag_profile_title" />
        <item
            android:id="@+id/nav_second_fragment"
            android:title="@string/frag_allrides_title" />
        <item
            android:id="@+id/nav_third_fragment"
            android:title="@string/frag_myrides_title" />
        <item
            android:id="@+id/nav_fourth_fragment"
            android:title="@string/frag_myactiverides_title" />
        <item
            android:id="@+id/nav_fifth_fragment"
            android:title="@string/frag_history_title" />
        <item
            android:id="@+id/nav_sixth_fragment"
            android:title="@string/frag_falae_title" />
        <item
            android:id="@+id/nav_seventh_fragment"
            android:title="@string/frag_termsofuse_title" />
        <item
            android:id="@+id/nav_eigth_fragment"
            android:title="@string/frag_about_title" />
    </group>
</menu>