<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/mIconBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/cancel"
        android:textColor="@color/dark_gray"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/mTitle"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_centerInParent="true"
        android:text="@string/app_name"
        android:gravity="center"
        android:textColor="@color/dark_gray"
        android:textSize="18sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:layout_centerVertical="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/mIconNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_next"
            android:textColor="@color/green_camera"
            android:textSize="18sp" />

    </LinearLayout>

</merge>