<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/secondary"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:background="@color/transparent">
    <RelativeLayout
        android:id="@+id/choose_lay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">
        <LinearLayout
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/btn_top"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/media_choose_title"
                android:textColor="@color/dark_gray"
                android:textSize="16sp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/facebook_option"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/title"
            android:background="@color/light_gray"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/facebook_choose"
                android:textColor="@color/darkblue2"
                android:textSize="16sp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/phone_option"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/facebook_option"
            android:background="@color/light_gray"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_choose"
                android:textColor="@color/darkblue2"
                android:textSize="16sp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/remove_option"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/phone_option"
            android:background="@drawable/btn_bottom"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remove_choose"
                android:textColor="@color/red"
                android:textSize="16sp"/>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/cancel_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/choose_lay">

        <LinearLayout
            android:id="@+id/cancel_option"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/separated_rounded_button"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textColor="@color/darkblue2"
                android:textStyle="bold"
                android:textSize="16sp"/>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>