<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="br.ufrj.caronae.frags.RideSearchFrag">

    <RelativeLayout
        android:id="@+id/lay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <LinearLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:weightSum="2"
            android:layout_margin="25dp"
            android:layout_centerHorizontal="true"
            android:background="@color/default_white_transparency"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/tab1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/tab_left"
                android:layout_marginRight="-2dp"
                android:layout_marginEnd="-2dp">

                <TextView
                    android:id="@+id/tab1_tv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="12sp"
                    android:maxLines="1"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:text="@string/go_rb"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/tab2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginLeft="-2dp"
                android:layout_marginStart="-2dp"
                android:background="@drawable/tab_right">
                <TextView
                    android:id="@+id/tab2_tv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="12sp"
                    android:maxLines="1"
                    android:gravity="center"
                    android:text="@string/back_rb"
                    android:textColor="@color/dark_gray"/>

            </RelativeLayout>
        </LinearLayout>

        <EditText
            android:id="@+id/center_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tabs"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:drawableLeft="@drawable/ic_location_on_24dp"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_location_on_24dp"
            android:focusable="false"
            android:text="@string/frag_ridefilter_centerHint"/>

        <EditText
            android:id="@+id/location_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/center_et"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:drawableLeft="@drawable/ic_location_on_24dp"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_location_on_24dp"
            android:focusable="false"
            android:text="@string/frag_ridefilter_locationHint"/>

        <EditText
            android:id="@+id/time_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/location_et"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:textAlignment="viewEnd"
            android:gravity="end"
            android:textColor="@color/dark_gray"
            android:text="sexta-feira, 01/05/2018 07:00"
            android:drawableLeft="@drawable/ics_date_and_time"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ics_date_and_time"
            android:focusable="false"/>

        <Button
            android:id="@+id/search_bt"
            style="@style/LightRaiseColorButtonRippleStyle"
            android:layout_width="96dp"
            android:layout_height="38dp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/time_et"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/btn_color"
            android:text="@string/frag_ridesearch_searchBt"
            android:textColor="@color/dark_gray"/>

    </RelativeLayout>

    <Button
        android:id="@+id/anotherSearch_bt"
        style="@style/Material.Drawable.Ripple.Wave.Light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lay"
        android:layout_centerHorizontal="true"
        android:background="@null"
        android:text="@string/frag_ridesearch_anotherSearchBt"
        android:visibility="gone"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvRides"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/anotherSearch_bt"
        android:layout_margin="8dp" />

</RelativeLayout>