<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="br.ufrj.caronae.frags.MyRidesFrag">

    <TextView
        android:id="@+id/helpText_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="3dp"
        android:text="@string/frag_myrides_helpText"
        android:visibility="invisible" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/myRidesList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/helpText_tv"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp" />

    <TextView
        android:id="@+id/norides_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:text="@string/frag_myrides_noRides"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="gone" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="16dp"
        android:src="@drawable/ic_add_white_24dp"
        app:backgroundTint="@color/fab_red" />

    <com.rey.material.widget.Button
        android:id="@+id/deleteAll_bt"
        style="@style/LightRaiseColorButtonRippleStyle"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_bt_raise_fab_red"
        android:text="@string/frag_myrides_deleteAllBt"
        android:textColor="@color/white"
        android:visibility="invisible"
        app:rd_enable="true" />

</RelativeLayout>
